battle zone changes

--- a/src/app/battle-zone/rules/rules.component.html
+++ b/src/app/battle-zone/rules/rules.component.html
@@ -1,18 +1,20 @@
-<div class="flex w-full md:flex-row flex-col justify-center rule-wrapper">
-  <!-- <div class="xl:w-1/3 lg:w-1/4">
-    <div
-      class="px-4 py-2 w-fit md:my-4 mx-4 my-1 rounded-lg bg-menu-200 hover:bg-menu-300 hover:cursor-pointer border border-menu-300 hover:border-menu-400"
-      routerLink="/battle-zone/pdbl"
-    >
-      Back
-    </div>
-  </div> -->
+<div class="pb-4 relative">
+  <button
+    class="absolute top-2 left-2 md:top-4 md:left-4"
+    routerLink="/battle-zone/pdbl"
+    mat-flat-button
+  >
+    Back
+  </button>
+  <div class="flex justify-center">
+    <h1 class="text-3xl font-bold text-center font-nasa">League Rules</h1>
+  </div>
+</div>
+
+<div class="flex w-full justify-center rule-wrapper">
   <div class="flex justify-center w-full max-w-192 px-4">
-    <div class="">
-      <h1 class="text-3xl font-bold text-center font-nasa md:mt-6 mb-6">
-        League Rules
-      </h1>
-      <mat-accordion>
+    <div>
+      <mat-accordion class="level3">
         <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
@@ -77,7 +79,16 @@
             <li>
               The following Pokemon Are Not allowed to Terastalize:
               <ul class="font-semibold">
-                <li>TBD</li>
+                <li>Baxcalibur</li>
+                <li>Kingambit</li>
+                <li>Melmetal</li>
+                <li>Necrozma</li>
+                <li>Ogerpon</li>
+                <li>Regieleki</li>
+                <li>Shedinja</li>
+                <li>Tapu Lele</li>
+                <li>Terapagos</li>
+                <li>Volcarona</li>
               </ul>
             </li>
           </ol>
