--- a/src/app/tools/teambuilder/teambuilder-pokemon.component.scss
+++ b/src/app/tools/teambuilder/teambuilder-pokemon.component.scss
@@ -7,3 +7,13 @@
     height: 1em;
   }
 }
+
+.teambuilder-wrapper {
+  height: 100%;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.level-2 {
+  box-shadow: var(--mat-sys-level2);
+}
