--- a/src/app/battle-zone/rules/rules.component.scss
+++ b/src/app/battle-zone/rules/rules.component.scss
@@ -1,3 +1,5 @@
+@use "@angular/material" as mat;
+
 .rule-wrapper {
   list-style-type: disc;
 }
@@ -5,7 +7,7 @@
 .rule-title {
   font-family: "Nasalization RG", sans-serif;
   font-weight: bold;
-  font-size: x-large;
+  font-size: larger;
 }
 
 ::marker {
