--- a/src/app/battle-zone/sign-up/sign-up.component.html
+++ b/src/app/battle-zone/sign-up/sign-up.component.html
@@ -1,14 +1,11 @@
-<!-- <div
-  class="px-4 py-2 w-fit md:my-4 mx-4 my-2 rounded-lg bg-menu-200 hover:bg-menu-300 hover:cursor-pointer border border-menu-300 hover:border-menu-400"
-  routerLink="/battle-zone/pdbl"
->
-  Back
-</div> -->
-<div class="p-4">
+<div class="p-3 relative space-y-3">
+  <button class="absolute" routerLink="/battle-zone/pdbl" mat-flat-button>
+    Back
+  </button>
   <form
     [formGroup]="signupForm"
     (ngSubmit)="onSubmit()"
-    class="sign-up space-y-2"
+    class="sign-up space-y-4"
   >
     <div class="flex justify-between h-16">
       <div class="text-xl font-nasa flex items-center">
@@ -17,93 +14,147 @@
       <img src="../../../assets/images/battle-zone/pdbl.png" />
     </div>
 
-    <!-- Discord Name -->
-    <mat-form-field class="w-full">
-      <mat-label>Discord Name</mat-label>
-      <input
-        matInput
-        placeholder="Enter Discord Name"
-        formControlName="discordName"
-      />
-      @if (signupForm.get("discordName")?.hasError("required")) {
-        <mat-error>Required</mat-error>
+    <mat-expansion-panel class="mat-elevation-z0">
+      <mat-expansion-panel-header>
+        <mat-panel-title class="font-bold"> Details </mat-panel-title>
+      </mat-expansion-panel-header>
+      @if (details) {
+        <table class="w-full">
+          <tr>
+            <th>Format:</th>
+            <td>{{ details.format }}</td>
+            <th>Draft Period:</th>
+            <td>
+              {{ details.draft[0] | date }} - {{ details.draft[1] | date }}
+            </td>
+          </tr>
+          <tr>
+            <th>Ruleset:</th>
+            <td>{{ details.ruleset }}</td>
+            <th>Draft Period:</th>
+            <td>
+              {{ details.season[0] | date }} - {{ details.season[1] | date }}
+            </td>
+          </tr>
+          <tr>
+            <th>Prize Pool:</th>
+            <td>${{ details.prize }} USD</td>
+          </tr>
+        </table>
       }
-    </mat-form-field>
+    </mat-expansion-panel>
 
-    <!-- Timezone -->
-    <mat-form-field class="w-full">
-      <mat-label>Time Zone</mat-label>
-      <mat-select formControlName="timezone">
-        @for (tz of timezones; track $index) {
-          <mat-option [value]="tz">{{ tz }}</mat-option>
+    @if (added) {
+      <section class="space-y-2">
+        <mat-card appearance="outlined">
+          <mat-card-content>
+            <div class="space-y-2">
+              <div class="text-lg font-bold w-full text-center">
+                Thank you for signing up for the PDBL
+              </div>
+              <div>
+                Join the
+                <a
+                  target="_blank"
+                  href="https://pokemondraftzone.com/donate"
+                  class="text-blue-600 font-bold hover:text-blue-700 hover:cursor-pointer"
+                >
+                  PDBL Discord Server
+                </a>
+                to complete your registration!
+              </div>
+              <div class="text-sm font-medium">
+                Consider
+                <a
+                  target="_blank"
+                  href="https://pokemondraftzone.com/donate"
+                  class="text-blue-600 hover:text-blue-700 hover:cursor-pointer"
+                  >donating</a
+                >
+                to the winnings pot. (Leave a note that it's for the draft
+                league.)
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </section>
+    } @else {
+      <section>
+        <!-- Discord Name -->
+        <mat-form-field class="w-full">
+          <mat-label>Discord Name</mat-label>
+          <input
+            matInput
+            placeholder="Enter Discord Name"
+            formControlName="discordName"
+          />
+          @if (signupForm.get("discordName")?.hasError("required")) {
+            <mat-error>Required</mat-error>
+          }
+        </mat-form-field>
+
+        <!-- Timezone -->
+        <mat-form-field class="w-full">
+          <mat-label>Time Zone</mat-label>
+          <mat-select formControlName="timezone">
+            @for (tz of timezones; track $index) {
+              <mat-option [value]="tz">{{ tz }}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
+
+        <!-- Experience -->
+        <mat-form-field class="w-full">
+          <mat-label>Experience</mat-label>
+          <textarea
+            matInput
+            formControlName="experience"
+            maxlength="500"
+            placeholder="How much experience do you have in draft?"
+          >
+          </textarea>
+        </mat-form-field>
+
+        <!-- Have Dropped -->
+        <div>
+          <div>Have you dropped from a league before?</div>
+          <mat-radio-group formControlName="droppedBefore">
+            <mat-radio-button [value]="true"> Yes </mat-radio-button>
+            <mat-radio-button [value]="false"> No </mat-radio-button>
+          </mat-radio-group>
+        </div>
+        @if (signupForm.get("droppedBefore")?.value) {
+          <!-- Why -->
+          <mat-form-field class="w-full">
+            <mat-label>Why?</mat-label>
+            <textarea matInput formControlName="droppedWhy" maxlength="500">
+            </textarea>
+            @if (signupForm.get("droppedWhy")?.hasError("required")) {
+              <mat-error>Required</mat-error>
+            }
+          </mat-form-field>
         }
-      </mat-select>
-    </mat-form-field>
 
-    <!-- Experience -->
-    <mat-form-field class="w-full">
-      <mat-label>Experience</mat-label>
-      <textarea
-        matInput
-        formControlName="experience"
-        maxlength="500"
-        placeholder="How much experience do you have in draft?"
-      >
-      </textarea>
-    </mat-form-field>
+        <!-- Confirm -->
+        <div class="text-sm font-medium">
+          <div>
+            Do you accept the
+            <a
+              target="_blank"
+              href="https://pokemondraftzone.com/battle-zone/pdbl/rules"
+              class="text-blue-600 hover:text-blue-700 hover:cursor-pointer"
+              >league rules</a
+            >
+            and agree to commit to playing for 8-11 weeks?
+          </div>
+          <mat-checkbox formControlName="confirm"> Accept </mat-checkbox>
+        </div>
 
-    <!-- Have Dropped -->
-    <div>
-      <div>Have you dropped from a league before?</div>
-      <mat-radio-group formControlName="droppedBefore">
-        <mat-radio-button [value]="true"> Yes </mat-radio-button>
-        <mat-radio-button [value]="false"> No </mat-radio-button>
-      </mat-radio-group>
-    </div>
-    @if (signupForm.get("droppedBefore")?.value) {
-      <!-- Why -->
-      <mat-form-field class="w-full">
-        <mat-label>Why?</mat-label>
-        <textarea matInput formControlName="droppedWhy" maxlength="500">
-        </textarea>
-        @if (signupForm.get("droppedWhy")?.hasError("required")) {
-          <mat-error>Required</mat-error>
-        }
-      </mat-form-field>
+        <button mat-raised-button type="submit" [disabled]="!signupForm.valid">
+          Submit
+        </button>
+      </section>
     }
-
-    <!-- Confirm -->
-    <div class="text-sm font-medium">
-      <div>
-        Do you accept the
-        <a
-          target="_blank"
-          href="https://pokemondraftzone.com/battle-zone/pdbl/rules"
-          class="text-blue-600 hover:text-blue-700 hover:cursor-pointer"
-          >league rules</a
-        >
-        and agree to commit to playing for the next 8-11 weeks?
-      </div>
-      <mat-checkbox formControlName="confirm"> Accept </mat-checkbox>
-    </div>
-
-    <div class="flex justify-between">
-      <button mat-raised-button type="submit" [disabled]="!signupForm.valid">
-        Submit
-      </button>
-
-      <div class="text-sm font-medium max-w-96">
-        Consider
-        <a
-          target="_blank"
-          href="https://pokemondraftzone.com/donate"
-          class="text-blue-600 hover:text-blue-700 hover:cursor-pointer"
-          >donating</a
-        >
-        to the winnings pot. <br />
-        (Leave a note that it's for the draft league.)
-      </div>
-    </div>
   </form>
 </div>
 <!-- {{ signupForm.value | json }} -->
