--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,45 +1,46 @@
-<div *ngIf="error" @fadeInOut class="fixed top-24 w-full flex justify-center">
-  <div
-    class="w-96 bg-opacity-90 shadow-xl min-h-16 bg-red-300 rounded-xl border-2 border-red-400"
-  >
-    <div class="w-full flex">
-      <div
-        *ngIf="error.status !== undefined && error.status != 0"
-        class="px-2 font-semibold"
-      >
-        Error {{ error.status }}:
+@if (error) {
+  <div @fadeInOut class="fixed top-24 w-full flex justify-center">
+    <div
+      class="w-96 bg-opacity-90 shadow-xl min-h-16 bg-red-300 rounded-xl border-2 border-red-400"
+    >
+      <div class="w-full flex">
+        @if (error.status !== undefined && error.status != 0) {
+          <div class="px-2 font-semibold">Error {{ error.status }}:</div>
+        }
+        @if (error.status === undefined || error.status === 0) {
+          <div class="px-2 font-semibold">Error:</div>
+        }
+        <div class="flex-grow"></div>
+        <div
+          class="w-6 h-6 pt-1 pr-1 hover:cursor-pointer"
+          (click)="clearError()"
+        >
+          <close-svg></close-svg>
+        </div>
       </div>
-      <div
-        *ngIf="error.status === undefined || error.status === 0"
-        class="px-2 font-semibold"
-      >
-        Error:
-      </div>
-      <div class="flex-grow"></div>
-      <div
-        class="w-6 h-6 pt-1 pr-1 hover:cursor-pointer"
-        (click)="clearError()"
-      >
-        <close-svg></close-svg>
-      </div>
-    </div>
-    <!-- fix overflow text -->
-    <div class="px-2 pb-2 whitespace-normal">
-      <ng-container [ngSwitch]="error.status">
-        <ng-container *ngSwitchDefault
-          ><div>
-            {{ error.statusText }}
-          </div>
-          <div *ngIf="error.error?.code">Code: {{ error.error!.code }}</div>
-          <div>URI: {{ error.url }}</div>
+      <!-- fix overflow text -->
+      <div class="px-2 pb-2 whitespace-normal">
+        <ng-container [ngSwitch]="error.status">
+          <ng-container *ngSwitchDefault
+            ><div>
+              {{ error.statusText }}
+            </div>
+            @if (error.error?.message) {
+              <div>Message: {{ error.error!.message }}</div>
+            }
+            @if (error.error?.code) {
+              <div>Code: {{ error.error!.code }}</div>
+            }
+            <div>URI: {{ error.url }}</div>
+          </ng-container>
+          <ng-container *ngSwitchCase="0"
+            ><div>
+              The server is unresponsive. Please try again later and follow our
+              Discord server for outage updates.
+            </div>
+          </ng-container>
         </ng-container>
-        <ng-container *ngSwitchCase="0"
-          ><div>
-            The server is unresponsive. Please try again later and follow our
-            Discord server for outage updates.
-          </div>
-        </ng-container>
-      </ng-container>
+      </div>
     </div>
   </div>
-</div>
+}
