--- a/src/app/tools/teambuilder/teambuilder-pokemon.component.html
+++ b/src/app/tools/teambuilder/teambuilder-pokemon.component.html
@@ -1,76 +1,79 @@
-<div class="h-full flex flex-col">
-  <div class="flex flex-grow-0">
-    <pokemon-select (pokemonSelected)="pokemon = $event"></pokemon-select>
-  </div>
-  @if (pokemon) {
-    <div class="w-full flex-grow overflow-auto">
-      <mat-tab-group>
-        <mat-tab label="Info">
-          <mat-form-field>
-            <mat-label>Ability</mat-label>
-            <mat-select [(ngModel)]="pokemon.set.ability" name="ability">
-              @for (ability of pokemon.abilities; track ability) {
-                <mat-option [value]="ability">{{ ability }}</mat-option>
-              }
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Item</mat-label>
-            <mat-select [(ngModel)]="pokemon.set.item" name="item">
-              @for (item of pokemon.items; track item) {
-                <mat-option [value]="item.name">
-                  {{ item.name }}
-                </mat-option>
-              }
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Tera Type</mat-label>
-            <mat-select [(ngModel)]="pokemon.set.teraType" name="teratype">
-              <mat-select-trigger>
-                <div class="tera-option">
-                  <img
-                    class="sprite-border"
-                    [src]="
-                      '../../../assets/icons/tera_types/Tera' +
-                      pokemon.set.teraType +
-                      '.png'
-                    "
-                  />
-                  {{ pokemon.set.teraType }}
-                </div>
-              </mat-select-trigger>
-              <mat-option [value]="null">
-                <div class="tera-option">None</div>
-              </mat-option>
-              @for (type of teraTypes; track type) {
-                <mat-option [value]="type">
+<div class="h-full flex flex-col p-12">
+  <div class="teambuilder-wrapper level-2">
+    <div class="flex flex-grow-0">
+      <pokemon-select (pokemonSelected)="pokemon = $event"></pokemon-select>
+    </div>
+    @if (pokemon) {
+      <div class="w-full flex-grow h-full overflow-y-auto level-2">
+        <mat-tab-group>
+          <mat-tab label="Info">
+            <mat-form-field>
+              <mat-label>Ability</mat-label>
+              <mat-select [(ngModel)]="pokemon.set.ability" name="ability">
+                @for (ability of pokemon.abilities; track ability) {
+                  <mat-option [value]="ability">{{ ability }}</mat-option>
+                }
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Item</mat-label>
+              <mat-select [(ngModel)]="pokemon.set.item" name="item">
+                @for (item of pokemon.items; track item) {
+                  <mat-option [value]="item.name">
+                    {{ item.name }}
+                  </mat-option>
+                }
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Tera Type</mat-label>
+              <mat-select [(ngModel)]="pokemon.set.teraType" name="teratype">
+                <mat-select-trigger>
                   <div class="tera-option">
                     <img
+                      class="sprite-border"
                       [src]="
-                        '../../../assets/icons/tera_types/Tera' + type + '.png'
+                        '../../../assets/icons/tera_types/Tera' +
+                        pokemon.set.teraType +
+                        '.png'
                       "
-                    />{{ type }}
+                    />
+                    {{ pokemon.set.teraType }}
                   </div>
+                </mat-select-trigger>
+                <mat-option [value]="null">
+                  <div class="tera-option">None</div>
                 </mat-option>
-              }
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Level</mat-label>
-            <input
-              matInput
-              type="number"
-              min="1"
-              max="100"
-              [(ngModel)]="pokemon.set.level"
-            />
-          </mat-form-field>
-        </mat-tab>
-        <mat-tab label="Moves">
-          <div>
-            <label for="moves">Moves</label>
-            <!-- <div id="moves" class="flex flex-col space-y-1">
+                @for (type of teraTypes; track type) {
+                  <mat-option [value]="type">
+                    <div class="tera-option">
+                      <img
+                        [src]="
+                          '../../../assets/icons/tera_types/Tera' +
+                          type +
+                          '.png'
+                        "
+                      />{{ type }}
+                    </div>
+                  </mat-option>
+                }
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Level</mat-label>
+              <input
+                matInput
+                type="number"
+                min="1"
+                max="100"
+                [(ngModel)]="pokemon.set.level"
+              />
+            </mat-form-field>
+          </mat-tab>
+          <mat-tab label="Moves">
+            <div>
+              <label for="moves">Moves</label>
+              <!-- <div id="moves" class="flex flex-col space-y-1">
               <div id="move1" class="border max-w-md w-full rounded">
                 <select-search
                   [items]="pokemon.moveList"
@@ -189,174 +192,183 @@
                 ></select-search>
               </div>
             </div> -->
-          </div>
-          <mat-form-field class="example-full-width">
-            <mat-label>Move</mat-label>
-            <input
-              type="text"
-              aria-label="Move 1"
-              spellcheck="false"
-              matInput
-              [(ngModel)]="pokemon.set.moves[0]"
-              [matAutocomplete]="auto"
-            />
-            <mat-autocomplete
-              [displayWith]="displayName"
-              autoActiveFirstOption
-              #auto="matAutocomplete"
-            >
-              @for (move of pokemon.moveList; track move) {
-                <mat-option [value]="move">
-                  {{ move.name }}
-                </mat-option>
-              }
-            </mat-autocomplete>
-          </mat-form-field>
-          <mat-form-field class="example-full-width">
-            <mat-label>Move</mat-label>
-            <input
-              type="text"
-              aria-label="Move 2"
-              spellcheck="false"
-              matInput
-              [(ngModel)]="pokemon.set.moves[1]"
-              [matAutocomplete]="auto"
-            />
-            <mat-autocomplete
-              [displayWith]="displayName"
-              autoActiveFirstOption
-              #auto="matAutocomplete"
-            >
-              @for (move of pokemon.moveList; track move) {
-                <mat-option [value]="move">
-                  {{ move.name }}
-                </mat-option>
-              }
-            </mat-autocomplete>
-          </mat-form-field>
-          <mat-form-field class="example-full-width">
-            <mat-label>Move</mat-label>
-            <input
-              type="text"
-              aria-label="Move 3"
-              spellcheck="false"
-              matInput
-              [(ngModel)]="pokemon.set.moves[2]"
-              [matAutocomplete]="auto"
-            />
-            <mat-autocomplete
-              [displayWith]="displayName"
-              autoActiveFirstOption
-              #auto="matAutocomplete"
-            >
-              @for (move of pokemon.moveList; track move) {
-                <mat-option [value]="move">
-                  {{ move.name }}
-                </mat-option>
-              }
-            </mat-autocomplete>
-          </mat-form-field>
-          <mat-form-field class="example-full-width">
-            <mat-label>Move</mat-label>
-            <input
-              type="text"
-              aria-label="Move 4"
-              spellcheck="false"
-              matInput
-              [(ngModel)]="pokemon.set.moves[3]"
-              [matAutocomplete]="auto"
-            />
-            <mat-autocomplete
-              [displayWith]="displayName"
-              autoActiveFirstOption
-              #auto="matAutocomplete"
-            >
-              @for (move of pokemon.moveList; track move) {
-                <mat-option [value]="move">
-                  {{ move.name }}
-                </mat-option>
-              }
-            </mat-autocomplete>
-          </mat-form-field>
-        </mat-tab>
-        <mat-tab label="Stats">
-          <mat-form-field>
-            <mat-label>Nature</mat-label>
-            <mat-select [(ngModel)]="pokemon.set.nature" name="ability">
-              @for (nature of natures; track nature) {
-                <mat-option [value]="nature">
-                  {{ nature.name }}
-                </mat-option>
-              }
-            </mat-select>
-          </mat-form-field>
-          <div>
-            @for (stat of stats; track $index) {
-              <label [for]="stat.id">{{ stat.full }}</label>
-              <div [id]="stat.id" class="flex items-center">
-                <mat-form-field>
-                  <mat-label>EVs</mat-label>
-                  <input
-                    matInput
-                    type="number"
-                    min="0"
-                    max="252"
-                    step="4"
-                    [(ngModel)]="pokemon.set.evs[stat.id]"
-                  />
-                </mat-form-field>
-                <mat-form-field>
-                  <mat-label>IVs</mat-label>
-                  <input
-                    matInput
-                    type="number"
-                    min="0"
-                    max="31"
-                    [(ngModel)]="pokemon.set.ivs[stat.id]"
-                  />
-                </mat-form-field>
-                @if (showBoosts && pokemon.set.boosts[stat.id] !== undefined) {
+            </div>
+            <mat-form-field class="example-full-width">
+              <mat-label>Move</mat-label>
+              <input
+                type="text"
+                aria-label="Move 1"
+                spellcheck="false"
+                matInput
+                [(ngModel)]="pokemon.set.moves[0]"
+                [matAutocomplete]="auto"
+              />
+              <mat-autocomplete
+                [displayWith]="displayName"
+                autoActiveFirstOption
+                #auto="matAutocomplete"
+              >
+                @for (move of pokemon.moveList; track move) {
+                  <mat-option [value]="move">
+                    {{ move.name }}
+                  </mat-option>
+                }
+              </mat-autocomplete>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <mat-label>Move</mat-label>
+              <input
+                type="text"
+                aria-label="Move 2"
+                spellcheck="false"
+                matInput
+                [(ngModel)]="pokemon.set.moves[1]"
+                [matAutocomplete]="auto"
+              />
+              <mat-autocomplete
+                [displayWith]="displayName"
+                autoActiveFirstOption
+                #auto="matAutocomplete"
+              >
+                @for (move of pokemon.moveList; track move) {
+                  <mat-option [value]="move">
+                    {{ move.name }}
+                  </mat-option>
+                }
+              </mat-autocomplete>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <mat-label>Move</mat-label>
+              <input
+                type="text"
+                aria-label="Move 3"
+                spellcheck="false"
+                matInput
+                [(ngModel)]="pokemon.set.moves[2]"
+                [matAutocomplete]="auto"
+              />
+              <mat-autocomplete
+                [displayWith]="displayName"
+                autoActiveFirstOption
+                #auto="matAutocomplete"
+              >
+                @for (move of pokemon.moveList; track move) {
+                  <mat-option [value]="move">
+                    {{ move.name }}
+                  </mat-option>
+                }
+              </mat-autocomplete>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <mat-label>Move</mat-label>
+              <input
+                type="text"
+                aria-label="Move 4"
+                spellcheck="false"
+                matInput
+                [(ngModel)]="pokemon.set.moves[3]"
+                [matAutocomplete]="auto"
+              />
+              <mat-autocomplete
+                [displayWith]="displayName"
+                autoActiveFirstOption
+                #auto="matAutocomplete"
+              >
+                @for (move of pokemon.moveList; track move) {
+                  <mat-option [value]="move">
+                    {{ move.name }}
+                  </mat-option>
+                }
+              </mat-autocomplete>
+            </mat-form-field>
+          </mat-tab>
+          <mat-tab label="Stats">
+            <mat-form-field>
+              <mat-label>Nature</mat-label>
+              <mat-select [(ngModel)]="pokemon.set.nature" name="ability">
+                @for (nature of natures; track nature) {
+                  <mat-option [value]="nature">
+                    {{ nature.name }}
+                  </mat-option>
+                }
+              </mat-select>
+            </mat-form-field>
+            <div>
+              @for (stat of stats; track $index) {
+                <label [for]="stat.id">{{ stat.full }}</label>
+                <div [id]="stat.id" class="flex items-center">
+                  <mat-slider min="0" max="31" discrete>
+                    <input matSliderThumb />
+                  </mat-slider>
+                  <mat-slider min="0" step="4" max="252" discrete>
+                    <input matSliderThumb />
+                  </mat-slider>
                   <mat-form-field>
-                    <mat-label>Stage</mat-label>
+                    <mat-label>EVs</mat-label>
                     <input
                       matInput
                       type="number"
-                      min="-6"
-                      max="6"
-                      [(ngModel)]="pokemon.set.boosts[stat.id]"
+                      min="0"
+                      max="252"
+                      step="4"
+                      [(ngModel)]="pokemon.set.evs[stat.id]"
                     />
                   </mat-form-field>
-                }
-                <div>{{ pokemon.set[stat.id] }}</div>
-              </div>
-            }
-          </div>
-        </mat-tab>
-        <mat-tab label="Import/Export">
-          <div class="p-2 space-y-2">
-            <button
-              mat-raised-button
-              class="rounded-full"
-              (click)="import(pokemondata.value)"
-            >
-              Import
-            </button>
-
-            <mat-form-field class="w-full">
-              <mat-label>Showdown Data</mat-label>
-              <textarea
-                class="w-full"
-                matInput
-                #pokemondata
-                spellcheck="false"
-                [value]="pokemon.set.export()"
+                  <mat-form-field>
+                    <mat-label>IVs</mat-label>
+                    <input
+                      matInput
+                      type="number"
+                      min="0"
+                      max="31"
+                      [(ngModel)]="pokemon.set.ivs[stat.id]"
+                    />
+                  </mat-form-field>
+                  @if (
+                    showBoosts && pokemon.set.boosts[stat.id] !== undefined
+                  ) {
+                    <mat-form-field>
+                      <mat-label>Stage</mat-label>
+                      <input
+                        matInput
+                        type="number"
+                        min="-6"
+                        max="6"
+                        [(ngModel)]="pokemon.set.boosts[stat.id]"
+                      />
+                    </mat-form-field>
+                  }
+                  <div>{{ pokemon.set[stat.id] }}</div>
+                </div>
+              }
+            </div>
+          </mat-tab>
+          <mat-tab label="Import/Export">
+            <div class="p-2 space-y-2">
+              <button
+                mat-raised-button
+                class="rounded-full"
+                (click)="import(pokemondata.value)"
               >
-              </textarea>
-            </mat-form-field>
-          </div>
-          {{ pokemon.set.toJson() | json }}
-        </mat-tab>
-      </mat-tab-group>
-    </div>
-  }
+                Import
+              </button>
+
+              <mat-form-field class="w-full">
+                <mat-label>Showdown Data</mat-label>
+                <textarea
+                  class="w-full"
+                  matInput
+                  #pokemondata
+                  spellcheck="false"
+                  [value]="pokemon.set.export()"
+                >
+                </textarea>
+              </mat-form-field>
+            </div>
+            {{ pokemon.set.toJson() | json }}
+          </mat-tab>
+        </mat-tab-group>
+      </div>
+    }
+  </div>
 </div>
