news updated, sign up fixed

--- a/src/app/battle-zone/landing/landing.component.html
+++ b/src/app/battle-zone/landing/landing.component.html
@@ -3,7 +3,7 @@
 >
   <div class="h-full flex justify-center items-center">
     <img
-      class="p-4 object-contain w-full max-w-160"
+      class="p-4 object-contain w-full max-w-96 md:max-w-160"
       src="../../assets/images/battle-zone/pdbl.png"
     />
   </div>
