--- a/src/app/battle-zone/sign-up/sign-up.component.html
+++ b/src/app/battle-zone/sign-up/sign-up.component.html
@@ -36,10 +36,6 @@
               {{ details.season[0] | date }} - {{ details.season[1] | date }}
             </td>
           </tr>
-          <tr>
-            <th>Prize Pool:</th>
-            <td>${{ details.prize }} USD</td>
-          </tr>
         </table>
       }
     </mat-expansion-panel>
@@ -48,11 +44,11 @@
       <section class="space-y-2">
         <mat-card appearance="outlined">
           <mat-card-content>
-            <div class="space-y-2">
-              <div class="text-lg font-bold w-full text-center">
+            <div class="space-y-4 px-2 py-6">
+              <div class="text-xl font-bold w-full text-center">
                 Thank you for signing up for the PDBL
               </div>
-              <div>
+              <div class="text-center">
                 Join the
                 <a
                   target="_blank"
@@ -63,7 +59,7 @@
                 </a>
                 to complete your registration!
               </div>
-              <div class="text-sm font-medium">
+              <div class="text-sm text-center font-medium">
                 Consider
                 <a
                   target="_blank"
@@ -71,8 +67,7 @@
                   class="text-blue-600 hover:text-blue-700 hover:cursor-pointer"
                   >donating</a
                 >
-                to the winnings pot. (Leave a note that it's for the draft
-                league.)
+                to the winnings pot. (Leave a note that it's for the PBDL)
               </div>
             </div>
           </mat-card-content>
@@ -82,7 +77,7 @@
       <section>
         <!-- Discord Name -->
         <mat-form-field class="w-full">
-          <mat-label>Discord Name</mat-label>
+          <mat-label>Discord Username</mat-label>
           <input
             matInput
             placeholder="Enter Discord Name"
@@ -136,7 +131,7 @@
         }
 
         <!-- Confirm -->
-        <div class="text-sm font-medium">
+        <div class="text-sm font-medium py-2">
           <div>
             Do you accept the
             <a
