fix discord link

--- a/src/app/battle-zone/sign-up/sign-up.component.html
+++ b/src/app/battle-zone/sign-up/sign-up.component.html
@@ -52,7 +52,7 @@
                 Join the
                 <a
                   target="_blank"
-                  href="https://pokemondraftzone.com/donate"
+                  href="https://discord.gg/FsxXcWFaF6"
                   class="text-blue-600 font-bold hover:text-blue-700 hover:cursor-pointer"
                 >
                   PDBL Discord Server
