--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -72,8 +72,20 @@
               src="../../../assets/images/battle-zone/pdbl.png"
             />
             <div class="space-x-2 w-full flex justify-center">
-              <button class="pdblbutton" mat-flat-button>More Details</button>
-              <button class="pdblbutton" mat-flat-button>Sign Up</button>
+              <button
+                class="pdblbutton"
+                routerLink="/battle-zone/pdbl"
+                mat-flat-button
+              >
+                More Details
+              </button>
+              <button
+                class="pdblbutton"
+                routerLink="/battle-zone/pdbl/sign-up"
+                mat-flat-button
+              >
+                Sign Up
+              </button>
             </div>
           </div>
         </div>
