--- a/src/app/battle-zone/tier-list/tier-list.component.html
+++ b/src/app/battle-zone/tier-list/tier-list.component.html
@@ -100,9 +100,11 @@
               <div class="tier-entry-container">
                 @for (tier of group.tiers; track $index) {
                   <div class="tier">
-                    <div class="tier-label">
-                      {{ tier.name }}
-                    </div>
+                    @if (tier.name) {
+                      <div class="tier-label">
+                        {{ tier.name }}
+                      </div>
+                    }
                     @for (pokemon of tier.pokemon; track $index) {
                       @if (typeInFilter(pokemon)) {
                         <div
