--- a/src/app/battle-zone/tier-list/tier-list.component.scss
+++ b/src/app/battle-zone/tier-list/tier-list.component.scss
@@ -50,7 +50,7 @@
 
 .restricted-icon {
   right: 0px;
-  top: 0px;
+  bottom: 0px;
   color: gray;
   transform: scale(0.75);
   position: absolute;
