--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,55 +1,58 @@
 <div class="flex w-full justify-center h-full p-8">
-  <div
-    class="border-2 border-menu-300 bg-menu-100 overflow-y-auto rounded-lg w-full h-full max-w-128 flex flex-col items-center"
-    [formGroup]="settingsForm"
-  >
-    <h1 class="font-bold text-3xl py-6">Settings</h1>
-    <div class="space-y-2">
-      <div class="p-1">
-        <label class="block mb-1 font-bold">Light/Dark Mode</label>
-        <select
-          class="bg-menu-200 border border-menu-200 rounded p-1"
-          formControlName="ldMode"
-        >
-          <option value="device">Device</option>
-          <option value="light">Light</option>
-          <option value="dark">Dark</option>
-        </select>
-      </div>
-      <div class="p-1">
-        <label class="block mb-1 font-bold">Theme</label>
-        <select
-          class="bg-gradient-to-r from-aTeam-200 to-bTeam-200 border border-menu-200 rounded p-1"
-          formControlName="theme"
-        >
-          <option
-            class="bg-menu-200"
-            *ngFor="let theme of themes"
-            value="{{ theme.id }}"
-          >
-            {{ theme.name }}
-          </option>
-        </select>
-      </div>
-      <div class="p-1">
-        <label class="block mb-1 font-bold">Sprite Set</label>
-        <div class="sm:flex sm:space-x-2 items-center">
+  @if (settingsForm) {
+    <div
+      class="border-2 border-menu-300 bg-menu-100 overflow-y-auto rounded-lg w-full h-full max-w-128 flex flex-col items-center"
+      [formGroup]="settingsForm"
+    >
+      <h1 class="font-bold text-3xl py-6">Settings</h1>
+      <div class="space-y-2">
+        <div class="p-1">
+          <label class="block mb-1 font-bold">Light/Dark Mode</label>
           <select
-            class="bg-menu-200 h-fit border border-menu-200 rounded p-1"
-            formControlName="spriteSet"
+            class="bg-menu-200 border border-menu-200 rounded p-1"
+            formControlName="ldMode"
           >
-            <option value="home">Pokemon Home</option>
-            <option value="serebii">Serebii</option>
-            <option value="ani">Pokemon Showdown - Animated</option>
-            <option value="sv">Pokemon Showdown - SV</option>
-            <option value="bw">Pokemon Showdown - BW</option>
-            <option value="afd">Pokemon Showdown - AFD</option>
-            <option value="pmd">PMD Sprite Project</option>
+            <option value="device">Device</option>
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
           </select>
-          <div class="w-20 p-2"><sprite [pokemon]="example"></sprite></div>
+        </div>
+        <div class="p-1">
+          <label class="block mb-1 font-bold">Theme</label>
+          <select
+            class="bg-gradient-to-r from-aTeam-200 to-bTeam-200 border border-menu-200 rounded p-1"
+            formControlName="theme"
+          >
+            <option
+              class="bg-menu-200"
+              *ngFor="let theme of themes"
+              value="{{ theme.id }}"
+            >
+              {{ theme.name }}
+            </option>
+          </select>
+        </div>
+        <div class="p-1">
+          <label class="block mb-1 font-bold">Sprite Set</label>
+          <div class="sm:flex sm:space-x-2 items-center">
+            <div>
+              <select
+                class="bg-menu-200 h-fit border border-menu-200 rounded p-1"
+                formControlName="spriteSet"
+              >
+                @for (spriteSet of spriteSets; track $index) {
+                  <option [value]="spriteSet.id">{{ spriteSet.name }}</option>
+                }
+              </select>
+              <div class="p-1 text-sm text-blue-500 hover:text-blue-400">
+                <a [href]="getCreditLink()" target="_blank">Credits</a>
+              </div>
+            </div>
+            <div class="w-20 p-2"><sprite [pokemon]="example"></sprite></div>
+          </div>
         </div>
       </div>
+      <!-- {{ settingsForm.value | json }} -->
     </div>
-    <!-- {{ settingsForm.value | json }} -->
-  </div>
+  }
 </div>
