--- a/src/app/util/ruleset-select/ruleset.component.html
+++ b/src/app/util/ruleset-select/ruleset.component.html
@@ -1,12 +1,27 @@
-<mat-form-field class="w-full">
+<mat-form-field class="w-full" [ngClass]="classList">
   <mat-label>Ruleset</mat-label>
   <mat-select
     [value]="selectedRuleset"
+    panelClass="ruleset-panel"
     (selectionChange)="onSelectionChange($event.value)"
-    name="rulesets"
   >
-    @for (ruleset of rulesets; track ruleset) {
-      <mat-option [value]="ruleset">{{ ruleset }}</mat-option>
+    <mat-select-trigger>{{ triggerString() }}</mat-select-trigger>
+    @for (group of rulesets; track $index) {
+      <mat-optgroup [label]="group[0]">
+        @for (ruleset of group[1]; track $index) {
+          <mat-option [value]="ruleset.id">
+            <span>{{ ruleset.name }}</span>
+            @if (ruleset.desc) {
+              <mat-icon
+                #tooltip="matTooltip"
+                [matTooltip]="ruleset.desc"
+                matTooltipPosition="above"
+                >info</mat-icon
+              >
+            }
+          </mat-option>
+        }
+      </mat-optgroup>
     }
   </mat-select>
 </mat-form-field>
