fix drafted selected

--- a/src/app/battle-zone/tier-list/tier-list.component.html
+++ b/src/app/battle-zone/tier-list/tier-list.component.html
@@ -77,6 +77,30 @@
                 </div>
               }
             </div>
+            <div class="relative inline-block">
+              <button
+                mat-stroked-button
+                (click)="menu = menu === 'division' ? null : 'division'"
+              >
+                Division
+              </button>
+              @if (menu === "division") {
+                <div
+                  class="absolute left-full top-0 ml-2 bg-page border rounded menu z-50"
+                >
+                  <mat-radio-group
+                    [formControl]="selectedDivision"
+                    class="flex flex-col p-1 pr-2"
+                  >
+                    @for (option of Divisions; track $index) {
+                      <mat-radio-button [value]="option">
+                        {{ option }}
+                      </mat-radio-button>
+                    }
+                  </mat-radio-group>
+                </div>
+              }
+            </div>
           </div>
         }
       </div>
@@ -110,7 +134,9 @@
                         <div
                           class="tier-entry"
                           [ngClass]="{
-                            drafted: pokemon.drafted,
+                            drafted:
+                              selectedDivision.value &&
+                              pokemon.drafted?.includes(selectedDivision.value),
                           }"
                         >
                           <div class="tier-sprite">
